Refactor: refactor to rust (#23)
* Fix: fix build on windows

* Refactor: refactor to rust

* Chore: update windows-rs & remove unused functions

* Feature: add compat path override

* Improve: use ptr as reference directly

* Improve: fix test window setup

* Feature: add notifier

* Feature: add notifier (jvm)

* Chore: code style

* Feature: add notification compat

* Feature: add shortcut & refactor icons

* Feature: basic complete linux parts

* Refactor: refactor java helpers

* Improve: improve linux impl (1/2)

* Improve: improve linux impl (2/2)

* Fix: fix build & clean code

* Fix: align platforms implement & fix build

* Fix: fix windows